fixed horizontal scrolling with mouse wheel

--- a/my-react-app/src/components/CSS/book.module.css
+++ b/my-react-app/src/components/CSS/book.module.css
@@ -5,14 +5,15 @@
     padding: 30px 10px 20px;
     margin: 10px 20px 10px;
     align-items: center;
-    width: 70%;
+    width: 100%;
     height: auto;
+    justify-content: space-between;
 }
 .Books {
     margin: 0px 70px 0px;
 }
 .Book {
     display: flex;
-    width: 50%;
+    width: 300px;
     height: auto;
 }
